[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.13", features=["cookies", "blocking"] }
futures = "0.3.25"
tokio = "1.22.0"
phf = { version = "0.11", features = ["macros"] }
